--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -2,3 +2,37 @@
   max-width: 1360px;
   margin: auto;
 }
+.slither-enter-active,
+.slither-leave-active {
+  transition: transform 1s;
+}
+
+.slither-enter,
+.slither-leave-to {
+  transform: translateX(-100%);
+}
+
+.slither-enter-to,
+.slither-leave {
+  transform: translateX(0);
+}
+
+.drain-enter-active,
+.drain-leave-active {
+  transition: transform 1s;
+}
+
+.drain-enter,
+.drain-leave-to {
+  transform: translateY(100%);
+}
+
+.drain-enter-to,
+.drain-leave {
+  transform: translateY(0);
+}
+h1,
+h2,
+h3 {
+  text-transform: capitalize;
+}
