some responsive style and add flip card for packages

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -36,3 +36,9 @@ h2,
 h3 {
   text-transform: capitalize;
 }
+@media screen and (max-width: 800px) and (min-width: 300px) {
+  .container {
+    width: 100%;
+    max-width: 100%;
+  }
+}
