--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,15 +12,17 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary: #1976d2;
-$secondary: #26a69a;
-$accent: #9c27b0;
+// $primary: #1976d2;
+// $secondary: #26a69a;
+// $accent: #9c27b0;
+// $dark: #1d1d1d;
+
+// $positive: #21ba45;
+// $negative: #c10015;
+// $info: #31ccec;
+// $warning: #f2c037;
 $fontColor: rgba(0, 0, 0, 0.808);
 
-$dark: #1d1d1d;
-
-$positive: #21ba45;
-$negative: #c10015;
-$info: #31ccec;
-$warning: #f2c037;
+$maincolor: #fff5f5;
+$sucColor: #fff;
 // app global css in SCSS form
