--- a/src/css/main.css
+++ b/src/css/main.css
@@ -5,3 +5,5 @@
 
 /* font-family: 'Nunito Sans', sans-serif; */
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;1,200;1,300&display=swap");
+
+/* bootstrap  */
