--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -19,10 +19,11 @@
 
  $positive: #21ba45;
  $negative: #ff7584;
- $info: #31ccec;
+ $info: #b6d8e4;
  $warning: #f2c037;
 $fontColor: rgba(0, 0, 0, 0.808);
 
 $maincolor: #fff5f5;
 $sucColor: #fff;
+$footer: #b6d8e4;
 // app global css in SCSS form
